docs/v0.6.0/_sources/gallery/scattering/spherical_pulse.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/scattering/spherical_pulse.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_scattering_spherical_pulse.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_scattering_spherical_pulse.py:


Circular Scatterer
==================

This example demonstrates the setup and execution of a circular scatterer experiment using LightWave2D.
We will define the simulation grid, add a circular scatterer and a line source, apply a perfectly matched layer (PML), run the simulation, and visualize the results.

.. GENERATED FROM PYTHON SOURCE LINES 10-11

Importing the necessary packages

.. GENERATED FROM PYTHON SOURCE LINES 11-51

.. code-block:: Python

    from TypedUnit import ureg
    from MPSPlots import colormaps

    from LightWave2D.grid import Grid
    from LightWave2D.experiment import Experiment

    grid = Grid(
        resolution=0.2 * ureg.micrometer,
        size_x=52 * ureg.micrometer,
        size_y=40 * ureg.micrometer,
        n_steps=800,
    )

    experiment = Experiment(grid=grid)

    scatterer = experiment.add_circle(
        position=("50%", "50%"),  # Center position of the scatterer
        epsilon_r=2.5,  # Relative permittivity of the scatterer
        radius=4 * ureg.micrometer,
        sigma=0 * (ureg.siemens / ureg.meter),  # Conductivity of the scatterer
    )

    source = experiment.add_line_pulse(
        duration=10 * ureg.femtosecond,
        position_0=("30%", "60%"),  # Starting position of the source
        position_1=("30%", "40%"),  # Ending position of the source
        amplitude=1,  # Amplitude of the source
        delay=0 * ureg.femtosecond,
    )

    experiment.add_pml(
        order=1,  # Order of the PML polynomial profile
        width="20%",  # Width of the PML region as a percentage of grid size
        sigma_max=10_000 * (ureg.siemens / ureg.meter),  # Maximum conductivity for the PML
    )

    experiment.plot()

    experiment.run()




.. image-sg:: /gallery/scattering/images/sphx_glr_spherical_pulse_001.png
   :alt: Fiber structure
   :srcset: /gallery/scattering/images/sphx_glr_spherical_pulse_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 52-53

Render an animation of the field propagation over time

.. GENERATED FROM PYTHON SOURCE LINES 53-60

.. code-block:: Python

    animation = experiment.render_propagation(
        skip_frame=5,  # Number of frames to skip in the animation
        colormap=colormaps.polytechnique.red_black_blue,  # Colormap for the animation
        enhance_contrast=4,  # Enhance contrast for better visualization
        save_as="./circular_scatterer_propagation.gif",  # Save the animation as a GIF file
        fps=30,
    )



.. image-sg:: /gallery/scattering/images/sphx_glr_spherical_pulse_002.png
   :alt: spherical pulse
   :srcset: /gallery/scattering/images/sphx_glr_spherical_pulse_002.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 28.438 seconds)


.. _sphx_glr_download_gallery_scattering_spherical_pulse.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: spherical_pulse.ipynb <spherical_pulse.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: spherical_pulse.py <spherical_pulse.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: spherical_pulse.zip <spherical_pulse.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
