docs/v0.8.0/_sources/gallery/scattering/spherical_pulse.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/scattering/spherical_pulse.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_scattering_spherical_pulse.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_scattering_spherical_pulse.py:


Circular Scatterer
==================

This example demonstrates the setup and execution of a circular scatterer experiment using LightWave2D.
We will define the simulation grid, add a circular scatterer and a line source, apply a perfectly matched layer (PML), run the simulation, and visualize the results.

.. GENERATED FROM PYTHON SOURCE LINES 10-11

Importing the necessary packages

.. GENERATED FROM PYTHON SOURCE LINES 11-51

.. code-block:: Python

    from TypedUnit import ureg
    from MPSPlots import colormaps

    from LightWave2D.grid import Grid
    from LightWave2D.experiment import Experiment

    grid = Grid(
        resolution=0.2 * ureg.micrometer,
        size_x=52 * ureg.micrometer,
        size_y=40 * ureg.micrometer,
        n_steps=800,
    )

    experiment = Experiment(grid=grid)

    scatterer = experiment.add_circle(
        position=("50%", "50%"),  # Center position of the scatterer
        epsilon_r=2.5,  # Relative permittivity of the scatterer
        radius=4 * ureg.micrometer,
        sigma=0 * (ureg.siemens / ureg.meter),  # Conductivity of the scatterer
    )

    source = experiment.add_line_pulse(
        duration=10 * ureg.femtosecond,
        position_0=("30%", "60%"),  # Starting position of the source
        position_1=("30%", "40%"),  # Ending position of the source
        amplitude=1,  # Amplitude of the source
        delay=0 * ureg.femtosecond,
    )

    experiment.add_pml(
        order=1,  # Order of the PML polynomial profile
        width="20%",  # Width of the PML region as a percentage of grid size
        sigma_max=10_000 * (ureg.siemens / ureg.meter),  # Maximum conductivity for the PML
    )

    experiment.plot()

    experiment.run()




.. image-sg:: /gallery/scattering/images/sphx_glr_spherical_pulse_001.png
   :alt: Fiber structure
   :srcset: /gallery/scattering/images/sphx_glr_spherical_pulse_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    SimulationResult(Ez_t=array([[[ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00],
            [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00],
            [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00],
            ...,
            [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00],
            [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00],
            [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00]],

           [[ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00],
            [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00],
            [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00],
            ...,
            [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00],
            [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00],
            [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00]],

           [[ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00],
            [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00],
            [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00],
            ...,
            [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00],
            [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00],
            [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00]],

           ...,

           [[ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00],
            [ 0.00000000e+00, -3.43564014e-07, -6.99750093e-07, ...,
             -6.91083204e-07, -3.39182810e-07,  0.00000000e+00],
            [ 0.00000000e+00, -6.98579071e-07, -1.42248634e-06, ...,
             -1.40534767e-06, -6.89906991e-07,  0.00000000e+00],
            ...,
            [ 0.00000000e+00,  4.33751766e-07,  8.47796571e-07, ...,
              8.42030468e-07,  4.30854772e-07,  0.00000000e+00],
            [ 0.00000000e+00,  2.21347104e-07,  4.32995891e-07, ...,
              4.30110776e-07,  2.19901827e-07,  0.00000000e+00],
            [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00]],

           [[ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00],
            [ 0.00000000e+00, -3.54857270e-07, -7.22311634e-07, ...,
             -7.13816389e-07, -3.50556255e-07,  0.00000000e+00],
            [ 0.00000000e+00, -7.21209603e-07, -1.46719640e-06, ...,
             -1.45041385e-06, -7.12710393e-07,  0.00000000e+00],
            ...,
            [ 0.00000000e+00,  4.16630107e-07,  8.12892445e-07, ...,
              8.07196476e-07,  4.13761502e-07,  0.00000000e+00],
            [ 0.00000000e+00,  2.12910208e-07,  4.15848924e-07, ...,
              4.12988615e-07,  2.11478580e-07,  0.00000000e+00],
            [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00]],

           [[ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00],
            [ 0.00000000e+00, -3.66038042e-07, -7.44515774e-07, ...,
             -7.36205494e-07, -3.61825648e-07,  0.00000000e+00],
            [ 0.00000000e+00, -7.43376184e-07, -1.51083458e-06, ...,
             -1.49442594e-06, -7.35060344e-07,  0.00000000e+00],
            ...,
            [ 0.00000000e+00,  3.99005540e-07,  7.76965385e-07, ...,
              7.71350045e-07,  3.96166738e-07,  0.00000000e+00],
            [ 0.00000000e+00,  2.04278741e-07,  3.98209911e-07, ...,
              3.95376438e-07,  2.02853075e-07,  0.00000000e+00],
            [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00, ...,
              0.00000000e+00,  0.00000000e+00,  0.00000000e+00]]],
          shape=(800, 260, 200)), recorded_time_stamp=<Quantity([0.00000000e+00 4.71730867e-16 9.43461735e-16 1.41519260e-15
     1.88692347e-15 2.35865434e-15 2.83038520e-15 3.30211607e-15
     3.77384694e-15 4.24557781e-15 4.71730867e-15 5.18903954e-15
     5.66077041e-15 6.13250128e-15 6.60423214e-15 7.07596301e-15
     7.54769388e-15 8.01942474e-15 8.49115561e-15 8.96288648e-15
     9.43461735e-15 9.90634821e-15 1.03780791e-14 1.08498099e-14
     1.13215408e-14 1.17932717e-14 1.22650026e-14 1.27367334e-14
     1.32084643e-14 1.36801952e-14 1.41519260e-14 1.46236569e-14
     1.50953878e-14 1.55671186e-14 1.60388495e-14 1.65105804e-14
     1.69823112e-14 1.74540421e-14 1.79257730e-14 1.83975038e-14
     1.88692347e-14 1.93409656e-14 1.98126964e-14 2.02844273e-14
     2.07561582e-14 2.12278890e-14 2.16996199e-14 2.21713508e-14
     2.26430816e-14 2.31148125e-14 2.35865434e-14 2.40582742e-14
     2.45300051e-14 2.50017360e-14 2.54734668e-14 2.59451977e-14
     2.64169286e-14 2.68886594e-14 2.73603903e-14 2.78321212e-14
     2.83038520e-14 2.87755829e-14 2.92473138e-14 2.97190446e-14
     3.01907755e-14 3.06625064e-14 3.11342372e-14 3.16059681e-14
     3.20776990e-14 3.25494298e-14 3.30211607e-14 3.34928916e-14
     3.39646224e-14 3.44363533e-14 3.49080842e-14 3.53798151e-14
     3.58515459e-14 3.63232768e-14 3.67950077e-14 3.72667385e-14
     3.77384694e-14 3.82102003e-14 3.86819311e-14 3.91536620e-14
     3.96253929e-14 4.00971237e-14 4.05688546e-14 4.10405855e-14
     4.15123163e-14 4.19840472e-14 4.24557781e-14 4.29275089e-14
     4.33992398e-14 4.38709707e-14 4.43427015e-14 4.48144324e-14
     4.52861633e-14 4.57578941e-14 4.62296250e-14 4.67013559e-14
     4.71730867e-14 4.76448176e-14 4.81165485e-14 4.85882793e-14
     4.90600102e-14 4.95317411e-14 5.00034719e-14 5.04752028e-14
     5.09469337e-14 5.14186645e-14 5.18903954e-14 5.23621263e-14
     5.28338571e-14 5.33055880e-14 5.37773189e-14 5.42490497e-14
     5.47207806e-14 5.51925115e-14 5.56642423e-14 5.61359732e-14
     5.66077041e-14 5.70794349e-14 5.75511658e-14 5.80228967e-14
     5.84946276e-14 5.89663584e-14 5.94380893e-14 5.99098202e-14
     6.03815510e-14 6.08532819e-14 6.13250128e-14 6.17967436e-14
     6.22684745e-14 6.27402054e-14 6.32119362e-14 6.36836671e-14
     6.41553980e-14 6.46271288e-14 6.50988597e-14 6.55705906e-14
     6.60423214e-14 6.65140523e-14 6.69857832e-14 6.74575140e-14
     6.79292449e-14 6.84009758e-14 6.88727066e-14 6.93444375e-14
     6.98161684e-14 7.02878992e-14 7.07596301e-14 7.12313610e-14
     7.17030918e-14 7.21748227e-14 7.26465536e-14 7.31182844e-14
     7.35900153e-14 7.40617462e-14 7.45334770e-14 7.50052079e-14
     7.54769388e-14 7.59486696e-14 7.64204005e-14 7.68921314e-14
     7.73638622e-14 7.78355931e-14 7.83073240e-14 7.87790548e-14
     7.92507857e-14 7.97225166e-14 8.01942474e-14 8.06659783e-14
     8.11377092e-14 8.16094401e-14 8.20811709e-14 8.25529018e-14
     8.30246327e-14 8.34963635e-14 8.39680944e-14 8.44398253e-14
     8.49115561e-14 8.53832870e-14 8.58550179e-14 8.63267487e-14
     8.67984796e-14 8.72702105e-14 8.77419413e-14 8.82136722e-14
     8.86854031e-14 8.91571339e-14 8.96288648e-14 9.01005957e-14
     9.05723265e-14 9.10440574e-14 9.15157883e-14 9.19875191e-14
     9.24592500e-14 9.29309809e-14 9.34027117e-14 9.38744426e-14
     9.43461735e-14 9.48179043e-14 9.52896352e-14 9.57613661e-14
     9.62330969e-14 9.67048278e-14 9.71765587e-14 9.76482895e-14
     9.81200204e-14 9.85917513e-14 9.90634821e-14 9.95352130e-14
     1.00006944e-13 1.00478675e-13 1.00950406e-13 1.01422136e-13
     1.01893867e-13 1.02365598e-13 1.02837329e-13 1.03309060e-13
     1.03780791e-13 1.04252522e-13 1.04724253e-13 1.05195983e-13
     1.05667714e-13 1.06139445e-13 1.06611176e-13 1.07082907e-13
     1.07554638e-13 1.08026369e-13 1.08498099e-13 1.08969830e-13
     1.09441561e-13 1.09913292e-13 1.10385023e-13 1.10856754e-13
     1.11328485e-13 1.11800216e-13 1.12271946e-13 1.12743677e-13
     1.13215408e-13 1.13687139e-13 1.14158870e-13 1.14630601e-13
     1.15102332e-13 1.15574063e-13 1.16045793e-13 1.16517524e-13
     1.16989255e-13 1.17460986e-13 1.17932717e-13 1.18404448e-13
     1.18876179e-13 1.19347909e-13 1.19819640e-13 1.20291371e-13
     1.20763102e-13 1.21234833e-13 1.21706564e-13 1.22178295e-13
     1.22650026e-13 1.23121756e-13 1.23593487e-13 1.24065218e-13
     1.24536949e-13 1.25008680e-13 1.25480411e-13 1.25952142e-13
     1.26423872e-13 1.26895603e-13 1.27367334e-13 1.27839065e-13
     1.28310796e-13 1.28782527e-13 1.29254258e-13 1.29725989e-13
     1.30197719e-13 1.30669450e-13 1.31141181e-13 1.31612912e-13
     1.32084643e-13 1.32556374e-13 1.33028105e-13 1.33499835e-13
     1.33971566e-13 1.34443297e-13 1.34915028e-13 1.35386759e-13
     1.35858490e-13 1.36330221e-13 1.36801952e-13 1.37273682e-13
     1.37745413e-13 1.38217144e-13 1.38688875e-13 1.39160606e-13
     1.39632337e-13 1.40104068e-13 1.40575798e-13 1.41047529e-13
     1.41519260e-13 1.41990991e-13 1.42462722e-13 1.42934453e-13
     1.43406184e-13 1.43877915e-13 1.44349645e-13 1.44821376e-13
     1.45293107e-13 1.45764838e-13 1.46236569e-13 1.46708300e-13
     1.47180031e-13 1.47651761e-13 1.48123492e-13 1.48595223e-13
     1.49066954e-13 1.49538685e-13 1.50010416e-13 1.50482147e-13
     1.50953878e-13 1.51425608e-13 1.51897339e-13 1.52369070e-13
     1.52840801e-13 1.53312532e-13 1.53784263e-13 1.54255994e-13
     1.54727724e-13 1.55199455e-13 1.55671186e-13 1.56142917e-13
     1.56614648e-13 1.57086379e-13 1.57558110e-13 1.58029841e-13
     1.58501571e-13 1.58973302e-13 1.59445033e-13 1.59916764e-13
     1.60388495e-13 1.60860226e-13 1.61331957e-13 1.61803688e-13
     1.62275418e-13 1.62747149e-13 1.63218880e-13 1.63690611e-13
     1.64162342e-13 1.64634073e-13 1.65105804e-13 1.65577534e-13
     1.66049265e-13 1.66520996e-13 1.66992727e-13 1.67464458e-13
     1.67936189e-13 1.68407920e-13 1.68879651e-13 1.69351381e-13
     1.69823112e-13 1.70294843e-13 1.70766574e-13 1.71238305e-13
     1.71710036e-13 1.72181767e-13 1.72653497e-13 1.73125228e-13
     1.73596959e-13 1.74068690e-13 1.74540421e-13 1.75012152e-13
     1.75483883e-13 1.75955614e-13 1.76427344e-13 1.76899075e-13
     1.77370806e-13 1.77842537e-13 1.78314268e-13 1.78785999e-13
     1.79257730e-13 1.79729460e-13 1.80201191e-13 1.80672922e-13
     1.81144653e-13 1.81616384e-13 1.82088115e-13 1.82559846e-13
     1.83031577e-13 1.83503307e-13 1.83975038e-13 1.84446769e-13
     1.84918500e-13 1.85390231e-13 1.85861962e-13 1.86333693e-13
     1.86805423e-13 1.87277154e-13 1.87748885e-13 1.88220616e-13
     1.88692347e-13 1.89164078e-13 1.89635809e-13 1.90107540e-13
     1.90579270e-13 1.91051001e-13 1.91522732e-13 1.91994463e-13
     1.92466194e-13 1.92937925e-13 1.93409656e-13 1.93881386e-13
     1.94353117e-13 1.94824848e-13 1.95296579e-13 1.95768310e-13
     1.96240041e-13 1.96711772e-13 1.97183503e-13 1.97655233e-13
     1.98126964e-13 1.98598695e-13 1.99070426e-13 1.99542157e-13
     2.00013888e-13 2.00485619e-13 2.00957349e-13 2.01429080e-13
     2.01900811e-13 2.02372542e-13 2.02844273e-13 2.03316004e-13
     2.03787735e-13 2.04259466e-13 2.04731196e-13 2.05202927e-13
     2.05674658e-13 2.06146389e-13 2.06618120e-13 2.07089851e-13
     2.07561582e-13 2.08033313e-13 2.08505043e-13 2.08976774e-13
     2.09448505e-13 2.09920236e-13 2.10391967e-13 2.10863698e-13
     2.11335429e-13 2.11807159e-13 2.12278890e-13 2.12750621e-13
     2.13222352e-13 2.13694083e-13 2.14165814e-13 2.14637545e-13
     2.15109276e-13 2.15581006e-13 2.16052737e-13 2.16524468e-13
     2.16996199e-13 2.17467930e-13 2.17939661e-13 2.18411392e-13
     2.18883122e-13 2.19354853e-13 2.19826584e-13 2.20298315e-13
     2.20770046e-13 2.21241777e-13 2.21713508e-13 2.22185239e-13
     2.22656969e-13 2.23128700e-13 2.23600431e-13 2.24072162e-13
     2.24543893e-13 2.25015624e-13 2.25487355e-13 2.25959085e-13
     2.26430816e-13 2.26902547e-13 2.27374278e-13 2.27846009e-13
     2.28317740e-13 2.28789471e-13 2.29261202e-13 2.29732932e-13
     2.30204663e-13 2.30676394e-13 2.31148125e-13 2.31619856e-13
     2.32091587e-13 2.32563318e-13 2.33035048e-13 2.33506779e-13
     2.33978510e-13 2.34450241e-13 2.34921972e-13 2.35393703e-13
     2.35865434e-13 2.36337165e-13 2.36808895e-13 2.37280626e-13
     2.37752357e-13 2.38224088e-13 2.38695819e-13 2.39167550e-13
     2.39639281e-13 2.40111011e-13 2.40582742e-13 2.41054473e-13
     2.41526204e-13 2.41997935e-13 2.42469666e-13 2.42941397e-13
     2.43413128e-13 2.43884858e-13 2.44356589e-13 2.44828320e-13
     2.45300051e-13 2.45771782e-13 2.46243513e-13 2.46715244e-13
     2.47186974e-13 2.47658705e-13 2.48130436e-13 2.48602167e-13
     2.49073898e-13 2.49545629e-13 2.50017360e-13 2.50489091e-13
     2.50960821e-13 2.51432552e-13 2.51904283e-13 2.52376014e-13
     2.52847745e-13 2.53319476e-13 2.53791207e-13 2.54262938e-13
     2.54734668e-13 2.55206399e-13 2.55678130e-13 2.56149861e-13
     2.56621592e-13 2.57093323e-13 2.57565054e-13 2.58036784e-13
     2.58508515e-13 2.58980246e-13 2.59451977e-13 2.59923708e-13
     2.60395439e-13 2.60867170e-13 2.61338901e-13 2.61810631e-13
     2.62282362e-13 2.62754093e-13 2.63225824e-13 2.63697555e-13
     2.64169286e-13 2.64641017e-13 2.65112747e-13 2.65584478e-13
     2.66056209e-13 2.66527940e-13 2.66999671e-13 2.67471402e-13
     2.67943133e-13 2.68414864e-13 2.68886594e-13 2.69358325e-13
     2.69830056e-13 2.70301787e-13 2.70773518e-13 2.71245249e-13
     2.71716980e-13 2.72188710e-13 2.72660441e-13 2.73132172e-13
     2.73603903e-13 2.74075634e-13 2.74547365e-13 2.75019096e-13
     2.75490827e-13 2.75962557e-13 2.76434288e-13 2.76906019e-13
     2.77377750e-13 2.77849481e-13 2.78321212e-13 2.78792943e-13
     2.79264673e-13 2.79736404e-13 2.80208135e-13 2.80679866e-13
     2.81151597e-13 2.81623328e-13 2.82095059e-13 2.82566790e-13
     2.83038520e-13 2.83510251e-13 2.83981982e-13 2.84453713e-13
     2.84925444e-13 2.85397175e-13 2.85868906e-13 2.86340636e-13
     2.86812367e-13 2.87284098e-13 2.87755829e-13 2.88227560e-13
     2.88699291e-13 2.89171022e-13 2.89642753e-13 2.90114483e-13
     2.90586214e-13 2.91057945e-13 2.91529676e-13 2.92001407e-13
     2.92473138e-13 2.92944869e-13 2.93416599e-13 2.93888330e-13
     2.94360061e-13 2.94831792e-13 2.95303523e-13 2.95775254e-13
     2.96246985e-13 2.96718716e-13 2.97190446e-13 2.97662177e-13
     2.98133908e-13 2.98605639e-13 2.99077370e-13 2.99549101e-13
     3.00020832e-13 3.00492563e-13 3.00964293e-13 3.01436024e-13
     3.01907755e-13 3.02379486e-13 3.02851217e-13 3.03322948e-13
     3.03794679e-13 3.04266409e-13 3.04738140e-13 3.05209871e-13
     3.05681602e-13 3.06153333e-13 3.06625064e-13 3.07096795e-13
     3.07568526e-13 3.08040256e-13 3.08511987e-13 3.08983718e-13
     3.09455449e-13 3.09927180e-13 3.10398911e-13 3.10870642e-13
     3.11342372e-13 3.11814103e-13 3.12285834e-13 3.12757565e-13
     3.13229296e-13 3.13701027e-13 3.14172758e-13 3.14644489e-13
     3.15116219e-13 3.15587950e-13 3.16059681e-13 3.16531412e-13
     3.17003143e-13 3.17474874e-13 3.17946605e-13 3.18418335e-13
     3.18890066e-13 3.19361797e-13 3.19833528e-13 3.20305259e-13
     3.20776990e-13 3.21248721e-13 3.21720452e-13 3.22192182e-13
     3.22663913e-13 3.23135644e-13 3.23607375e-13 3.24079106e-13
     3.24550837e-13 3.25022568e-13 3.25494298e-13 3.25966029e-13
     3.26437760e-13 3.26909491e-13 3.27381222e-13 3.27852953e-13
     3.28324684e-13 3.28796415e-13 3.29268145e-13 3.29739876e-13
     3.30211607e-13 3.30683338e-13 3.31155069e-13 3.31626800e-13
     3.32098531e-13 3.32570261e-13 3.33041992e-13 3.33513723e-13
     3.33985454e-13 3.34457185e-13 3.34928916e-13 3.35400647e-13
     3.35872378e-13 3.36344108e-13 3.36815839e-13 3.37287570e-13
     3.37759301e-13 3.38231032e-13 3.38702763e-13 3.39174494e-13
     3.39646224e-13 3.40117955e-13 3.40589686e-13 3.41061417e-13
     3.41533148e-13 3.42004879e-13 3.42476610e-13 3.42948341e-13
     3.43420071e-13 3.43891802e-13 3.44363533e-13 3.44835264e-13
     3.45306995e-13 3.45778726e-13 3.46250457e-13 3.46722188e-13
     3.47193918e-13 3.47665649e-13 3.48137380e-13 3.48609111e-13
     3.49080842e-13 3.49552573e-13 3.50024304e-13 3.50496034e-13
     3.50967765e-13 3.51439496e-13 3.51911227e-13 3.52382958e-13
     3.52854689e-13 3.53326420e-13 3.53798151e-13 3.54269881e-13
     3.54741612e-13 3.55213343e-13 3.55685074e-13 3.56156805e-13
     3.56628536e-13 3.57100267e-13 3.57571997e-13 3.58043728e-13
     3.58515459e-13 3.58987190e-13 3.59458921e-13 3.59930652e-13
     3.60402383e-13 3.60874114e-13 3.61345844e-13 3.61817575e-13
     3.62289306e-13 3.62761037e-13 3.63232768e-13 3.63704499e-13
     3.64176230e-13 3.64647960e-13 3.65119691e-13 3.65591422e-13
     3.66063153e-13 3.66534884e-13 3.67006615e-13 3.67478346e-13
     3.67950077e-13 3.68421807e-13 3.68893538e-13 3.69365269e-13
     3.69837000e-13 3.70308731e-13 3.70780462e-13 3.71252193e-13
     3.71723923e-13 3.72195654e-13 3.72667385e-13 3.73139116e-13
     3.73610847e-13 3.74082578e-13 3.74554309e-13 3.75026040e-13
     3.75497770e-13 3.75969501e-13 3.76441232e-13 3.76912963e-13], 'second')>, detector_data=array([], shape=(800, 0), dtype=float64), grid=namespace(x_stamp=<Quantity([ 0.   0.2  0.4  0.6  0.8  1.   1.2  1.4  1.6  1.8  2.   2.2  2.4  2.6
      2.8  3.   3.2  3.4  3.6  3.8  4.   4.2  4.4  4.6  4.8  5.   5.2  5.4
      5.6  5.8  6.   6.2  6.4  6.6  6.8  7.   7.2  7.4  7.6  7.8  8.   8.2
      8.4  8.6  8.8  9.   9.2  9.4  9.6  9.8 10.  10.2 10.4 10.6 10.8 11.
     11.2 11.4 11.6 11.8 12.  12.2 12.4 12.6 12.8 13.  13.2 13.4 13.6 13.8
     14.  14.2 14.4 14.6 14.8 15.  15.2 15.4 15.6 15.8 16.  16.2 16.4 16.6
     16.8 17.  17.2 17.4 17.6 17.8 18.  18.2 18.4 18.6 18.8 19.  19.2 19.4
     19.6 19.8 20.  20.2 20.4 20.6 20.8 21.  21.2 21.4 21.6 21.8 22.  22.2
     22.4 22.6 22.8 23.  23.2 23.4 23.6 23.8 24.  24.2 24.4 24.6 24.8 25.
     25.2 25.4 25.6 25.8 26.  26.2 26.4 26.6 26.8 27.  27.2 27.4 27.6 27.8
     28.  28.2 28.4 28.6 28.8 29.  29.2 29.4 29.6 29.8 30.  30.2 30.4 30.6
     30.8 31.  31.2 31.4 31.6 31.8 32.  32.2 32.4 32.6 32.8 33.  33.2 33.4
     33.6 33.8 34.  34.2 34.4 34.6 34.8 35.  35.2 35.4 35.6 35.8 36.  36.2
     36.4 36.6 36.8 37.  37.2 37.4 37.6 37.8 38.  38.2 38.4 38.6 38.8 39.
     39.2 39.4 39.6 39.8 40.  40.2 40.4 40.6 40.8 41.  41.2 41.4 41.6 41.8
     42.  42.2 42.4 42.6 42.8 43.  43.2 43.4 43.6 43.8 44.  44.2 44.4 44.6
     44.8 45.  45.2 45.4 45.6 45.8 46.  46.2 46.4 46.6 46.8 47.  47.2 47.4
     47.6 47.8 48.  48.2 48.4 48.6 48.8 49.  49.2 49.4 49.6 49.8 50.  50.2
     50.4 50.6 50.8 51.  51.2 51.4 51.6 51.8], 'micrometer')>, y_stamp=<Quantity([ 0.   0.2  0.4  0.6  0.8  1.   1.2  1.4  1.6  1.8  2.   2.2  2.4  2.6
      2.8  3.   3.2  3.4  3.6  3.8  4.   4.2  4.4  4.6  4.8  5.   5.2  5.4
      5.6  5.8  6.   6.2  6.4  6.6  6.8  7.   7.2  7.4  7.6  7.8  8.   8.2
      8.4  8.6  8.8  9.   9.2  9.4  9.6  9.8 10.  10.2 10.4 10.6 10.8 11.
     11.2 11.4 11.6 11.8 12.  12.2 12.4 12.6 12.8 13.  13.2 13.4 13.6 13.8
     14.  14.2 14.4 14.6 14.8 15.  15.2 15.4 15.6 15.8 16.  16.2 16.4 16.6
     16.8 17.  17.2 17.4 17.6 17.8 18.  18.2 18.4 18.6 18.8 19.  19.2 19.4
     19.6 19.8 20.  20.2 20.4 20.6 20.8 21.  21.2 21.4 21.6 21.8 22.  22.2
     22.4 22.6 22.8 23.  23.2 23.4 23.6 23.8 24.  24.2 24.4 24.6 24.8 25.
     25.2 25.4 25.6 25.8 26.  26.2 26.4 26.6 26.8 27.  27.2 27.4 27.6 27.8
     28.  28.2 28.4 28.6 28.8 29.  29.2 29.4 29.6 29.8 30.  30.2 30.4 30.6
     30.8 31.  31.2 31.4 31.6 31.8 32.  32.2 32.4 32.6 32.8 33.  33.2 33.4
     33.6 33.8 34.  34.2 34.4 34.6 34.8 35.  35.2 35.4 35.6 35.8 36.  36.2
     36.4 36.6 36.8 37.  37.2 37.4 37.6 37.8 38.  38.2 38.4 38.6 38.8 39.
     39.2 39.4 39.6 39.8], 'micrometer')>), components=(<LightWave2D.components.Circle object at 0x7f0e59ce3470>,), sources=(<LightWave2D.source.LinePulseSource object at 0x7f0e59cb09f0>,), detectors=(), detector_time_stamp=<Quantity([0.00000000e+00 4.71730867e-16 9.43461735e-16 1.41519260e-15
     1.88692347e-15 2.35865434e-15 2.83038520e-15 3.30211607e-15
     3.77384694e-15 4.24557781e-15 4.71730867e-15 5.18903954e-15
     5.66077041e-15 6.13250128e-15 6.60423214e-15 7.07596301e-15
     7.54769388e-15 8.01942474e-15 8.49115561e-15 8.96288648e-15
     9.43461735e-15 9.90634821e-15 1.03780791e-14 1.08498099e-14
     1.13215408e-14 1.17932717e-14 1.22650026e-14 1.27367334e-14
     1.32084643e-14 1.36801952e-14 1.41519260e-14 1.46236569e-14
     1.50953878e-14 1.55671186e-14 1.60388495e-14 1.65105804e-14
     1.69823112e-14 1.74540421e-14 1.79257730e-14 1.83975038e-14
     1.88692347e-14 1.93409656e-14 1.98126964e-14 2.02844273e-14
     2.07561582e-14 2.12278890e-14 2.16996199e-14 2.21713508e-14
     2.26430816e-14 2.31148125e-14 2.35865434e-14 2.40582742e-14
     2.45300051e-14 2.50017360e-14 2.54734668e-14 2.59451977e-14
     2.64169286e-14 2.68886594e-14 2.73603903e-14 2.78321212e-14
     2.83038520e-14 2.87755829e-14 2.92473138e-14 2.97190446e-14
     3.01907755e-14 3.06625064e-14 3.11342372e-14 3.16059681e-14
     3.20776990e-14 3.25494298e-14 3.30211607e-14 3.34928916e-14
     3.39646224e-14 3.44363533e-14 3.49080842e-14 3.53798151e-14
     3.58515459e-14 3.63232768e-14 3.67950077e-14 3.72667385e-14
     3.77384694e-14 3.82102003e-14 3.86819311e-14 3.91536620e-14
     3.96253929e-14 4.00971237e-14 4.05688546e-14 4.10405855e-14
     4.15123163e-14 4.19840472e-14 4.24557781e-14 4.29275089e-14
     4.33992398e-14 4.38709707e-14 4.43427015e-14 4.48144324e-14
     4.52861633e-14 4.57578941e-14 4.62296250e-14 4.67013559e-14
     4.71730867e-14 4.76448176e-14 4.81165485e-14 4.85882793e-14
     4.90600102e-14 4.95317411e-14 5.00034719e-14 5.04752028e-14
     5.09469337e-14 5.14186645e-14 5.18903954e-14 5.23621263e-14
     5.28338571e-14 5.33055880e-14 5.37773189e-14 5.42490497e-14
     5.47207806e-14 5.51925115e-14 5.56642423e-14 5.61359732e-14
     5.66077041e-14 5.70794349e-14 5.75511658e-14 5.80228967e-14
     5.84946276e-14 5.89663584e-14 5.94380893e-14 5.99098202e-14
     6.03815510e-14 6.08532819e-14 6.13250128e-14 6.17967436e-14
     6.22684745e-14 6.27402054e-14 6.32119362e-14 6.36836671e-14
     6.41553980e-14 6.46271288e-14 6.50988597e-14 6.55705906e-14
     6.60423214e-14 6.65140523e-14 6.69857832e-14 6.74575140e-14
     6.79292449e-14 6.84009758e-14 6.88727066e-14 6.93444375e-14
     6.98161684e-14 7.02878992e-14 7.07596301e-14 7.12313610e-14
     7.17030918e-14 7.21748227e-14 7.26465536e-14 7.31182844e-14
     7.35900153e-14 7.40617462e-14 7.45334770e-14 7.50052079e-14
     7.54769388e-14 7.59486696e-14 7.64204005e-14 7.68921314e-14
     7.73638622e-14 7.78355931e-14 7.83073240e-14 7.87790548e-14
     7.92507857e-14 7.97225166e-14 8.01942474e-14 8.06659783e-14
     8.11377092e-14 8.16094401e-14 8.20811709e-14 8.25529018e-14
     8.30246327e-14 8.34963635e-14 8.39680944e-14 8.44398253e-14
     8.49115561e-14 8.53832870e-14 8.58550179e-14 8.63267487e-14
     8.67984796e-14 8.72702105e-14 8.77419413e-14 8.82136722e-14
     8.86854031e-14 8.91571339e-14 8.96288648e-14 9.01005957e-14
     9.05723265e-14 9.10440574e-14 9.15157883e-14 9.19875191e-14
     9.24592500e-14 9.29309809e-14 9.34027117e-14 9.38744426e-14
     9.43461735e-14 9.48179043e-14 9.52896352e-14 9.57613661e-14
     9.62330969e-14 9.67048278e-14 9.71765587e-14 9.76482895e-14
     9.81200204e-14 9.85917513e-14 9.90634821e-14 9.95352130e-14
     1.00006944e-13 1.00478675e-13 1.00950406e-13 1.01422136e-13
     1.01893867e-13 1.02365598e-13 1.02837329e-13 1.03309060e-13
     1.03780791e-13 1.04252522e-13 1.04724253e-13 1.05195983e-13
     1.05667714e-13 1.06139445e-13 1.06611176e-13 1.07082907e-13
     1.07554638e-13 1.08026369e-13 1.08498099e-13 1.08969830e-13
     1.09441561e-13 1.09913292e-13 1.10385023e-13 1.10856754e-13
     1.11328485e-13 1.11800216e-13 1.12271946e-13 1.12743677e-13
     1.13215408e-13 1.13687139e-13 1.14158870e-13 1.14630601e-13
     1.15102332e-13 1.15574063e-13 1.16045793e-13 1.16517524e-13
     1.16989255e-13 1.17460986e-13 1.17932717e-13 1.18404448e-13
     1.18876179e-13 1.19347909e-13 1.19819640e-13 1.20291371e-13
     1.20763102e-13 1.21234833e-13 1.21706564e-13 1.22178295e-13
     1.22650026e-13 1.23121756e-13 1.23593487e-13 1.24065218e-13
     1.24536949e-13 1.25008680e-13 1.25480411e-13 1.25952142e-13
     1.26423872e-13 1.26895603e-13 1.27367334e-13 1.27839065e-13
     1.28310796e-13 1.28782527e-13 1.29254258e-13 1.29725989e-13
     1.30197719e-13 1.30669450e-13 1.31141181e-13 1.31612912e-13
     1.32084643e-13 1.32556374e-13 1.33028105e-13 1.33499835e-13
     1.33971566e-13 1.34443297e-13 1.34915028e-13 1.35386759e-13
     1.35858490e-13 1.36330221e-13 1.36801952e-13 1.37273682e-13
     1.37745413e-13 1.38217144e-13 1.38688875e-13 1.39160606e-13
     1.39632337e-13 1.40104068e-13 1.40575798e-13 1.41047529e-13
     1.41519260e-13 1.41990991e-13 1.42462722e-13 1.42934453e-13
     1.43406184e-13 1.43877915e-13 1.44349645e-13 1.44821376e-13
     1.45293107e-13 1.45764838e-13 1.46236569e-13 1.46708300e-13
     1.47180031e-13 1.47651761e-13 1.48123492e-13 1.48595223e-13
     1.49066954e-13 1.49538685e-13 1.50010416e-13 1.50482147e-13
     1.50953878e-13 1.51425608e-13 1.51897339e-13 1.52369070e-13
     1.52840801e-13 1.53312532e-13 1.53784263e-13 1.54255994e-13
     1.54727724e-13 1.55199455e-13 1.55671186e-13 1.56142917e-13
     1.56614648e-13 1.57086379e-13 1.57558110e-13 1.58029841e-13
     1.58501571e-13 1.58973302e-13 1.59445033e-13 1.59916764e-13
     1.60388495e-13 1.60860226e-13 1.61331957e-13 1.61803688e-13
     1.62275418e-13 1.62747149e-13 1.63218880e-13 1.63690611e-13
     1.64162342e-13 1.64634073e-13 1.65105804e-13 1.65577534e-13
     1.66049265e-13 1.66520996e-13 1.66992727e-13 1.67464458e-13
     1.67936189e-13 1.68407920e-13 1.68879651e-13 1.69351381e-13
     1.69823112e-13 1.70294843e-13 1.70766574e-13 1.71238305e-13
     1.71710036e-13 1.72181767e-13 1.72653497e-13 1.73125228e-13
     1.73596959e-13 1.74068690e-13 1.74540421e-13 1.75012152e-13
     1.75483883e-13 1.75955614e-13 1.76427344e-13 1.76899075e-13
     1.77370806e-13 1.77842537e-13 1.78314268e-13 1.78785999e-13
     1.79257730e-13 1.79729460e-13 1.80201191e-13 1.80672922e-13
     1.81144653e-13 1.81616384e-13 1.82088115e-13 1.82559846e-13
     1.83031577e-13 1.83503307e-13 1.83975038e-13 1.84446769e-13
     1.84918500e-13 1.85390231e-13 1.85861962e-13 1.86333693e-13
     1.86805423e-13 1.87277154e-13 1.87748885e-13 1.88220616e-13
     1.88692347e-13 1.89164078e-13 1.89635809e-13 1.90107540e-13
     1.90579270e-13 1.91051001e-13 1.91522732e-13 1.91994463e-13
     1.92466194e-13 1.92937925e-13 1.93409656e-13 1.93881386e-13
     1.94353117e-13 1.94824848e-13 1.95296579e-13 1.95768310e-13
     1.96240041e-13 1.96711772e-13 1.97183503e-13 1.97655233e-13
     1.98126964e-13 1.98598695e-13 1.99070426e-13 1.99542157e-13
     2.00013888e-13 2.00485619e-13 2.00957349e-13 2.01429080e-13
     2.01900811e-13 2.02372542e-13 2.02844273e-13 2.03316004e-13
     2.03787735e-13 2.04259466e-13 2.04731196e-13 2.05202927e-13
     2.05674658e-13 2.06146389e-13 2.06618120e-13 2.07089851e-13
     2.07561582e-13 2.08033313e-13 2.08505043e-13 2.08976774e-13
     2.09448505e-13 2.09920236e-13 2.10391967e-13 2.10863698e-13
     2.11335429e-13 2.11807159e-13 2.12278890e-13 2.12750621e-13
     2.13222352e-13 2.13694083e-13 2.14165814e-13 2.14637545e-13
     2.15109276e-13 2.15581006e-13 2.16052737e-13 2.16524468e-13
     2.16996199e-13 2.17467930e-13 2.17939661e-13 2.18411392e-13
     2.18883122e-13 2.19354853e-13 2.19826584e-13 2.20298315e-13
     2.20770046e-13 2.21241777e-13 2.21713508e-13 2.22185239e-13
     2.22656969e-13 2.23128700e-13 2.23600431e-13 2.24072162e-13
     2.24543893e-13 2.25015624e-13 2.25487355e-13 2.25959085e-13
     2.26430816e-13 2.26902547e-13 2.27374278e-13 2.27846009e-13
     2.28317740e-13 2.28789471e-13 2.29261202e-13 2.29732932e-13
     2.30204663e-13 2.30676394e-13 2.31148125e-13 2.31619856e-13
     2.32091587e-13 2.32563318e-13 2.33035048e-13 2.33506779e-13
     2.33978510e-13 2.34450241e-13 2.34921972e-13 2.35393703e-13
     2.35865434e-13 2.36337165e-13 2.36808895e-13 2.37280626e-13
     2.37752357e-13 2.38224088e-13 2.38695819e-13 2.39167550e-13
     2.39639281e-13 2.40111011e-13 2.40582742e-13 2.41054473e-13
     2.41526204e-13 2.41997935e-13 2.42469666e-13 2.42941397e-13
     2.43413128e-13 2.43884858e-13 2.44356589e-13 2.44828320e-13
     2.45300051e-13 2.45771782e-13 2.46243513e-13 2.46715244e-13
     2.47186974e-13 2.47658705e-13 2.48130436e-13 2.48602167e-13
     2.49073898e-13 2.49545629e-13 2.50017360e-13 2.50489091e-13
     2.50960821e-13 2.51432552e-13 2.51904283e-13 2.52376014e-13
     2.52847745e-13 2.53319476e-13 2.53791207e-13 2.54262938e-13
     2.54734668e-13 2.55206399e-13 2.55678130e-13 2.56149861e-13
     2.56621592e-13 2.57093323e-13 2.57565054e-13 2.58036784e-13
     2.58508515e-13 2.58980246e-13 2.59451977e-13 2.59923708e-13
     2.60395439e-13 2.60867170e-13 2.61338901e-13 2.61810631e-13
     2.62282362e-13 2.62754093e-13 2.63225824e-13 2.63697555e-13
     2.64169286e-13 2.64641017e-13 2.65112747e-13 2.65584478e-13
     2.66056209e-13 2.66527940e-13 2.66999671e-13 2.67471402e-13
     2.67943133e-13 2.68414864e-13 2.68886594e-13 2.69358325e-13
     2.69830056e-13 2.70301787e-13 2.70773518e-13 2.71245249e-13
     2.71716980e-13 2.72188710e-13 2.72660441e-13 2.73132172e-13
     2.73603903e-13 2.74075634e-13 2.74547365e-13 2.75019096e-13
     2.75490827e-13 2.75962557e-13 2.76434288e-13 2.76906019e-13
     2.77377750e-13 2.77849481e-13 2.78321212e-13 2.78792943e-13
     2.79264673e-13 2.79736404e-13 2.80208135e-13 2.80679866e-13
     2.81151597e-13 2.81623328e-13 2.82095059e-13 2.82566790e-13
     2.83038520e-13 2.83510251e-13 2.83981982e-13 2.84453713e-13
     2.84925444e-13 2.85397175e-13 2.85868906e-13 2.86340636e-13
     2.86812367e-13 2.87284098e-13 2.87755829e-13 2.88227560e-13
     2.88699291e-13 2.89171022e-13 2.89642753e-13 2.90114483e-13
     2.90586214e-13 2.91057945e-13 2.91529676e-13 2.92001407e-13
     2.92473138e-13 2.92944869e-13 2.93416599e-13 2.93888330e-13
     2.94360061e-13 2.94831792e-13 2.95303523e-13 2.95775254e-13
     2.96246985e-13 2.96718716e-13 2.97190446e-13 2.97662177e-13
     2.98133908e-13 2.98605639e-13 2.99077370e-13 2.99549101e-13
     3.00020832e-13 3.00492563e-13 3.00964293e-13 3.01436024e-13
     3.01907755e-13 3.02379486e-13 3.02851217e-13 3.03322948e-13
     3.03794679e-13 3.04266409e-13 3.04738140e-13 3.05209871e-13
     3.05681602e-13 3.06153333e-13 3.06625064e-13 3.07096795e-13
     3.07568526e-13 3.08040256e-13 3.08511987e-13 3.08983718e-13
     3.09455449e-13 3.09927180e-13 3.10398911e-13 3.10870642e-13
     3.11342372e-13 3.11814103e-13 3.12285834e-13 3.12757565e-13
     3.13229296e-13 3.13701027e-13 3.14172758e-13 3.14644489e-13
     3.15116219e-13 3.15587950e-13 3.16059681e-13 3.16531412e-13
     3.17003143e-13 3.17474874e-13 3.17946605e-13 3.18418335e-13
     3.18890066e-13 3.19361797e-13 3.19833528e-13 3.20305259e-13
     3.20776990e-13 3.21248721e-13 3.21720452e-13 3.22192182e-13
     3.22663913e-13 3.23135644e-13 3.23607375e-13 3.24079106e-13
     3.24550837e-13 3.25022568e-13 3.25494298e-13 3.25966029e-13
     3.26437760e-13 3.26909491e-13 3.27381222e-13 3.27852953e-13
     3.28324684e-13 3.28796415e-13 3.29268145e-13 3.29739876e-13
     3.30211607e-13 3.30683338e-13 3.31155069e-13 3.31626800e-13
     3.32098531e-13 3.32570261e-13 3.33041992e-13 3.33513723e-13
     3.33985454e-13 3.34457185e-13 3.34928916e-13 3.35400647e-13
     3.35872378e-13 3.36344108e-13 3.36815839e-13 3.37287570e-13
     3.37759301e-13 3.38231032e-13 3.38702763e-13 3.39174494e-13
     3.39646224e-13 3.40117955e-13 3.40589686e-13 3.41061417e-13
     3.41533148e-13 3.42004879e-13 3.42476610e-13 3.42948341e-13
     3.43420071e-13 3.43891802e-13 3.44363533e-13 3.44835264e-13
     3.45306995e-13 3.45778726e-13 3.46250457e-13 3.46722188e-13
     3.47193918e-13 3.47665649e-13 3.48137380e-13 3.48609111e-13
     3.49080842e-13 3.49552573e-13 3.50024304e-13 3.50496034e-13
     3.50967765e-13 3.51439496e-13 3.51911227e-13 3.52382958e-13
     3.52854689e-13 3.53326420e-13 3.53798151e-13 3.54269881e-13
     3.54741612e-13 3.55213343e-13 3.55685074e-13 3.56156805e-13
     3.56628536e-13 3.57100267e-13 3.57571997e-13 3.58043728e-13
     3.58515459e-13 3.58987190e-13 3.59458921e-13 3.59930652e-13
     3.60402383e-13 3.60874114e-13 3.61345844e-13 3.61817575e-13
     3.62289306e-13 3.62761037e-13 3.63232768e-13 3.63704499e-13
     3.64176230e-13 3.64647960e-13 3.65119691e-13 3.65591422e-13
     3.66063153e-13 3.66534884e-13 3.67006615e-13 3.67478346e-13
     3.67950077e-13 3.68421807e-13 3.68893538e-13 3.69365269e-13
     3.69837000e-13 3.70308731e-13 3.70780462e-13 3.71252193e-13
     3.71723923e-13 3.72195654e-13 3.72667385e-13 3.73139116e-13
     3.73610847e-13 3.74082578e-13 3.74554309e-13 3.75026040e-13
     3.75497770e-13 3.75969501e-13 3.76441232e-13 3.76912963e-13], 'second')>, flux=(), field_path=None)



.. GENERATED FROM PYTHON SOURCE LINES 52-53

Render an animation of the field propagation over time

.. GENERATED FROM PYTHON SOURCE LINES 53-60

.. code-block:: Python

    animation = experiment.render_propagation(
        skip_frame=5,  # Number of frames to skip in the animation
        colormap=colormaps.polytechnique.red_black_blue,  # Colormap for the animation
        enhance_contrast=4,  # Enhance contrast for better visualization
        save_as="./circular_scatterer_propagation.gif",  # Save the animation as a GIF file
        fps=30,
    )



.. image-sg:: /gallery/scattering/images/sphx_glr_spherical_pulse_002.png
   :alt: spherical pulse
   :srcset: /gallery/scattering/images/sphx_glr_spherical_pulse_002.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 27.720 seconds)


.. _sphx_glr_download_gallery_scattering_spherical_pulse.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: spherical_pulse.ipynb <spherical_pulse.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: spherical_pulse.py <spherical_pulse.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: spherical_pulse.zip <spherical_pulse.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
